--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
-node_modules/
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-.env
+# Test binary, built with "go test -c"
+*.test
 
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
 tmp/
 
-output.css
+# IDE specific files
+.vscode
+.idea
+
+# .env file
+.env
+
+# Project build
+main
+*templ.go
+
+/node_modules
+
+database.sqlite3
